syntax = "proto3";

import "api/general/v1/common.proto";
import "api/user/v1/user.proto";
import "api/item/v1/task.proto";

package letscrum.api.item.v1;

option go_package = "github.com/letscrum/letscrum/api/item/v1";

enum WorkItemType {
  Backlog = 0;
  Bug = 1;
}



message WorkItem {
  int64 id = 1;
  int64 project_id = 2;
  int64 sprint_id = 3;
  int64 feature_id = 4;
  string title = 5;
  WorkItemType type = 6;
  string description = 7;
  enum WorkItemStatus {
    New = 0;
    Approved = 1;
    Committed = 2;
    Done = 3;
    Removed = 4;
  }
  WorkItemStatus status = 8;
  letscrum.api.user.v1.User assign_user = 9;
  letscrum.api.user.v1.User created_user = 10;
  repeated Task tasks_unknown = 11;
  repeated Task tasks_to_do = 12;
  repeated Task tasks_in_progress = 13;
  repeated Task tasks_done = 14;
  repeated Task tasks_removed = 15;
  repeated Task tasks_all = 16;
  int64 created_at = 17;
  int64 updated_at = 18;
}

message CreateWorkItemRequest {
  int64 project_id = 1;
  WorkItemType type = 2;
  string title = 3;
  int64 sprint_id = 4;
  int64 feature_id = 5;
  string description = 6;
}

message CreateWorkItemResponse {
  bool success = 1;
  WorkItem item = 2;
}

message GetWorkItemRequest {
  int64 project_id = 1;
  int64 work_item_id = 2;
}

message GetWorkItemResponse {
  WorkItem items = 1;
}

message ListWorkItemRequest {
  int64 project_id = 1;
  int32 page = 2;
  int32 size = 3;
  string keyword = 4;
  int64 sprint_id = 5;
}

message ListWorkItemResponse {
  repeated WorkItem items = 1;
  letscrum.api.general.v1.Pagination pagination = 2;
}

message UpdateWorkItemRequest {
  int64 project_id = 1;
  int64 work_item_id = 2;
  WorkItem.WorkItemStatus status = 3;
  string title = 4;
  string description = 5;
  int64 sprint_id = 6;
  int64 feature_id = 7;
  int64 assign_user_id = 8;
}

message UpdateWorkItemStatusRequest {
  int64 project_id = 1;
  int64 work_item_id = 2;
  WorkItem.WorkItemStatus status = 3;
}

message AssignWorkItemRequest {
  int64 project_id = 1;
  int64 work_item_id = 2;
  int64 assign_user_id = 3;
}

message UpdateWorkItemResponse {
  bool success = 1;
  WorkItem item = 2;
}
