syntax = "proto3";

import "api/general/v1/common.proto";

package letscrum.api.project.v1;

option go_package = "github.com/letscrum/letscrum/api/project/v1";

message Sprint {
  string id = 1;
  string project_id = 2;
  string name = 3;
  int64 start_date = 4;
  int64 end_date = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
  enum SprintStatus {
    UNKNOWN = 0;
    Past = 1;
    Current = 2;
    Future = 3;
  }
  SprintStatus status = 8;
  repeated SprintMember members = 9;
}

message SprintMember {
  string user_id = 1;
  string user_name = 2;
  string role = 3;
  float capacity = 4;
}

message CreateSprintRequest {
  string project_id = 1;
  string name = 2;
  int64 start_date = 3;
  int64 end_date = 4;
}

message CreateSprintResponse {
  bool success = 1;
  Sprint item = 2;
}

message UpdateSprintRequest {
  string project_id = 1;
  string sprint_id = 2;
  string name = 3;
  int64 start_date = 4;
  int64 end_date = 5;
}

message UpdateSprintMembersRequest {
  string project_id = 1;
  string sprint_id = 2;
  repeated SprintMember members = 3;
}

message UpdateSprintResponse {
  bool success = 1;
  Sprint item = 2;
}

message DeleteSprintRequest {
  string project_id = 1;
  string sprint_id = 2;
}

message DeleteSprintResponse {
  bool success = 1;
  string id = 2;
}

message ListSprintRequest {
  string project_id = 1;
  int32 page = 2;
  int32 size = 3;
  string keyword = 4;
}

message ListSprintResponse {
  repeated Sprint items = 1;
  letscrum.api.general.v1.Pagination pagination = 2;
}

message GetSprintRequest {
  string project_id = 1;
  string sprint_id = 2;
}

message GetSprintResponse {
  Sprint item = 1;
}
