syntax = "proto3";

import "apis/general/v1/common.proto";
import "apis/user/v1/user.proto";

package letscrum.apis.project.v1;

option go_package = "github.com/letscrum/letscrum/apis/project/v1";

message Project {
  int64 id = 1;
  string name = 2;
  string display_name = 3;
  letscrum.apis.user.v1.User created_user = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
  repeated letscrum.apis.user.v1.User members = 7;
}

message CreateProjectRequest {
  Project project = 2;
}

message CreateProjectResponse {
  int64 id = 1;
}

message UpdateProjectRequest {
  int64 project_id = 1;
  Project project = 2;
}

message UpdateProjectResponse {
  int64 id = 1;
}

message DeleteProjectRequest {
  int64 project_id = 1;
}

message DeleteProjectResponse {
  int64 id = 1;
}

message ListProjectRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListProjectResponse {
  repeated Project items = 1;
  letscrum.apis.general.v1.Pagination pagination = 2;
}

message GetProjectRequest {
  int64 project_id = 1;
}

message GetProjectResponse {
  Project item = 1;
}

message CreateProjectMemberRequest {
  int64 project_id = 1;
  int64 user_id = 2;
  bool is_admin = 3;
}

message CreateProjectMemberResponse {
  int64 id = 1;
}

message UpdateProjectMemberRequest {
  int64 project_id = 1;
  int64 user_id = 2;
  bool is_admin = 3;
}

message UpdateProjectMemberResponse {
  int64 id = 1;
}

message DeleteProjectMemberRequest {
  int64 project_id = 1;
  int64 user_id = 2;
}

message DeleteProjectMemberResponse {
  int64 id = 1;
}

message ListProjectMemberRequest {
  int32 page = 1;
  int32 page_size = 2;
  int64 project_id = 3;
}

message ListProjectMemberResponse {
  repeated letscrum.apis.user.v1.User items = 1;
  letscrum.apis.general.v1.Pagination pagination = 2;
}

message ListUserProjectRequest {
  int32 page = 1;
  int32 page_size = 2;
  int64 user_id = 3;
}

message ListUserProjectResponse {
  repeated letscrum.apis.project.v1.Project items = 1;
  letscrum.apis.general.v1.Pagination pagination = 2;
}

